tests/ui/rust-2018/uniform-paths/ambiguity-nested.stderr
error[E0659]: `std` is ambiguous
  --> $DIR/ambiguity-nested.rs:8:13
   |
LL |     pub use std::io;
   |             ^^^ ambiguous name
   |
   = note: ambiguous because of multiple potential import sources
   = note: `std` could refer to a built-in crate
   = help: use `::std` to refer to this crate unambiguously
note: `std` could also refer to the module defined here
  --> $DIR/ambiguity-nested.rs:11:5
   |
LL | /     mod std {
LL | |         pub struct io;
LL | |     }
   | |_____^
   = help: use `self::std` to refer to this module unambiguously

error: aborting due to previous error

For more information about this error, try `rustc --explain E0659`.
